codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_queue_short_without_context.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"╭───────────────── tab queue ╮"
"┃ › Test                     │"
"┃                            │"
"┃                            │"
"┃                            │"
"┃                            │"
"┃                            │"
"╰────────────────────────────╯"
"  Tab queue 98% context left  "
